--- a/README
+++ b/README
@@ -14,7 +14,7 @@ applications.
 
 * Authors
 
-Wakaba <wakabatan@hatena.ne.jp>, chris4403, mechairoi, and yaotti.
+Wakaba <wakaba@suikawiki.org>, chris4403, mechairoi, and yaotti.
 
 * Acknowledgements
 
